Archive/db30b539d6b90b53f9a1163fa8d771b7-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:26:5: error: expected initializer before 'a'
     a = 0
     ^
